more memory for sbt